# roadie-python

./: .gitignore  README.md  pyproject.toml
src/roadie/: __init__.py  _backoff.py  _idempotency.py  _metadata.py  _streaming.py  _transport.py  _version.py  client.py  errors.py  types.py
src/roadie/resources/: __init__.py  _shared.py  chat.py  client_tokens.py  embeddings.py  models.py
tests/: conftest.py  test_chat.py  test_client_tokens.py  test_embeddings.py  test_errors.py  test_models.py  test_streaming.py
